// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Lists/ListItem Single-line item with Avatar and controls: Components/Lists/ListItem Single-line item with Avatar and controls 1`] = `
.c2.c2 {
  width: 24px;
  height: 24px;
  font-size: 0.75rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  background-color: #f5f6fb;
}

.c2.c2:hover {
  opacity: 0.88;
  cursor: pointer;
}

.c2.c2:active {
  opacity: 0.76;
}

.c2 > .avatar-short-name {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5.c5 {
  width: 36px;
}

.c5 .custom-switchBase {
  width: 36px;
  height: 20px;
  -webkit-transform: translateX(-8px);
  -ms-transform: translateX(-8px);
  transform: translateX(-8px);
}

.c5:hover .custom-bar {
  opacity: 0.88 !important;
}

.c5:active .custom-bar {
  opacity: 0.76 !important;
}

.c5 .custom-bar {
  opacity: 1;
  background: #bfbfbf;
  border-radius: 10px;
  padding: 4px;
  width: 36px;
  height: 18px;
  box-sizing: border-box;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  margin: 0;
}

.c5.c5 .custom-icon {
  width: 12px;
  height: 12px;
  box-shadow: none;
}

.c5 .custom-disabled .custom-icon {
  background: #fff;
}

.c5 .custom-checked {
  -webkit-transform: translateX(8px);
  -ms-transform: translateX(8px);
  transform: translateX(8px);
}

.c5 .custom-checked .custom-icon {
  background: #fff;
}

.c5 .custom-checked + .custom-bar {
  opacity: 1;
}

.c5 .custom-disabled.custom-checked + .custom-bar {
  opacity: 1;
  background: #b2e3f4;
}

.c5 input {
  -webkit-transform: translateX(8px);
  -ms-transform: translateX(8px);
  transform: translateX(8px);
}

.c0.c0 {
  padding: 8px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 16px;
}

.c1 {
  margin-right: 8px;
}

.c4.c4 {
  margin: 0px 8px;
}

.c4.c4 a,
.c4.c4 button {
  margin-right: 0;
}

.c3 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c3.c3 {
  padding: 0;
}

.c3.c3 .list-item-primary {
  color: #212121;
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c3.c3 .list-item-secondary {
  color: #757575;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

<ul
  className="MuiList-root MuiList-padding "
>
  <div
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-dense MuiListItem-gutters MuiListItem-button c0"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiAvatar-root c1 c2"
      size="small"
    >
      <img
        className="MuiAvatar-img"
        src="test-file-stub"
      />
    </div>
    <div
      className="MuiListItemText-root c3"
    >
      <span
        className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary list-item-primary"
      >
        Single-line item name
      </span>
    </div>
    <div
      className="c4"
    >
      <span
        className="MuiSwitch-root custom-root c5"
      >
        <span
          className="MuiButtonBase-root MuiIconButton-root MuiPrivateSwitchBase-root MuiSwitch-switchBase custom-switchBase MuiSwitch-colorPrimary"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              className="MuiSwitch-icon custom-icon"
            />
            <input
              className="MuiPrivateSwitchBase-input"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-bar custom-bar"
        />
      </span>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
</ul>
`;

exports[`Storyshots Components/Lists/ListItem Single-line item with icon: Components/Lists/ListItem Single-line item with icon 1`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: default;
}

.c5 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c2.c2 {
  padding: 0;
  width: 20px;
  height: 20px;
  color: #9e9e9e;
  opacity: 1;
  padding: 0;
  background-color: inherit;
}

.c2.c2 .c3,
.c2.c2 .c3 svg {
  font-size: 20px;
}

.c2.c2:hover {
  background-color: transparent;
}

.c2.c2:hover .c3 {
  color: rgba(158,158,158,0.88);
}

.c2.c2:active .c3 {
  color: #9e9e9e;
}

.c2.c2.c2.c2.disabled .c3 {
  color: rgba(0,0,0,0.12);
}

.c2.c2 .rippleVisible {
  color: #9e9e9e;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c7.c7 .c3,
.c7.c7 .c3 svg {
  font-size: 20px;
}

.c7.c7:hover .c3 {
  color: rgba(158,158,158,0.88);
}

.c7.c7:active .c3 {
  color: #9e9e9e;
}

.c7.c7.c7.c7.disabled .c3 {
  color: rgba(0,0,0,0.12);
}

.c8.c8 .c3,
.c8.c8 .c3 svg {
  font-size: 20px;
}

.c8.c8:hover .c3 {
  color: rgba(6,132,189,0.88);
}

.c8.c8:active .c3 {
  color: #0684bd;
}

.c8.c8.c8.c8.disabled .c3 {
  color: rgba(0,0,0,0.12);
}

.c9.c9 .c3,
.c9.c9 .c3 svg {
  font-size: 20px;
}

.c9.c9:hover .c3 {
  color: rgba(6,132,189,0.88);
}

.c9.c9:active .c3 {
  color: #0684bd;
}

.c9.c9.c9.c9.disabled .c3 {
  color: rgba(0,0,0,0.12);
}

.c10.c10 .c3,
.c10.c10 .c3 svg {
  font-size: 20px;
}

.c10.c10:hover .c3 {
  color: rgba(237,182,60,0.88);
}

.c10.c10:active .c3 {
  color: #edb63c;
}

.c10.c10.c10.c10.disabled .c3 {
  color: rgba(0,0,0,0.12);
}

.c0.c0 {
  padding: 8px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 16px;
}

.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 36px;
  height: 36px;
  margin-right: 8px;
  background-color: #f5f6fb;
  border-radius: 4px;
  overflow: hidden;
}

.c6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c6.c6 {
  padding: 0;
}

.c6.c6 .list-item-primary {
  color: #212121;
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c6.c6 .list-item-secondary {
  color: #757575;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

<ul
  className="MuiList-root MuiList-padding "
>
  <div
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button c0"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiListItemIcon-root c1"
    >
      <button
        aria-describedby={null}
        className="MuiButtonBase-root MuiIconButton-root c2"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        size="medium"
        tabIndex="0"
        title={null}
        type="button"
        variant="plain"
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            className="c3  icon c4"
            size="medium"
          >
            <svg
              className="c5"
              role="img"
            >
              <use
                href="#undefined"
                xlinkHref="#undefined"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <div
      className="MuiListItemText-root c6"
    >
      <span
        className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary list-item-primary"
      >
        Single-line item name
      </span>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
</ul>
`;

exports[`Storyshots Components/Lists/ListItem Two-line item: Components/Lists/ListItem Two-line item 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  cursor: default;
}

.c8 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 36px;
}

.c6.c6 {
  padding: 0;
  width: 20px;
  height: 20px;
  color: #9e9e9e;
  opacity: 1;
  padding: 0;
  background-color: inherit;
}

.c6.c6 .c7,
.c6.c6 .c7 svg {
  font-size: 20px;
}

.c6.c6:hover {
  background-color: transparent;
}

.c6.c6:hover .c7 {
  color: rgba(158,158,158,0.88);
}

.c6.c6:active .c7 {
  color: #9e9e9e;
}

.c6.c6.c6.c6.disabled .c7 {
  color: rgba(0,0,0,0.12);
}

.c6.c6 .rippleVisible {
  color: #9e9e9e;
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c9.c9 .c7,
.c9.c9 .c7 svg {
  font-size: 20px;
}

.c9.c9:hover .c7 {
  color: rgba(158,158,158,0.88);
}

.c9.c9:active .c7 {
  color: #9e9e9e;
}

.c9.c9.c9.c9.disabled .c7 {
  color: rgba(0,0,0,0.12);
}

.c10.c10 .c7,
.c10.c10 .c7 svg {
  font-size: 20px;
}

.c10.c10:hover .c7 {
  color: rgba(6,132,189,0.88);
}

.c10.c10:active .c7 {
  color: #0684bd;
}

.c10.c10.c10.c10.disabled .c7 {
  color: rgba(0,0,0,0.12);
}

.c11.c11 .c7,
.c11.c11 .c7 svg {
  font-size: 20px;
}

.c11.c11:hover .c7 {
  color: rgba(6,132,189,0.88);
}

.c11.c11:active .c7 {
  color: #0684bd;
}

.c11.c11.c11.c11.disabled .c7 {
  color: rgba(0,0,0,0.12);
}

.c12.c12 .c7,
.c12.c12 .c7 svg {
  font-size: 20px;
}

.c12.c12:hover .c7 {
  color: rgba(237,182,60,0.88);
}

.c12.c12:active .c7 {
  color: #edb63c;
}

.c12.c12.c12.c12.disabled .c7 {
  color: rgba(0,0,0,0.12);
}

.c0.c0 {
  padding: 8px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
}

.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 36px;
  height: 36px;
  margin-right: 8px;
  background-color: #f5f6fb;
  border-radius: 4px;
  overflow: hidden;
}

.c5.c5 {
  margin: 0px 8px;
}

.c5.c5 a,
.c5.c5 button {
  margin-right: 0;
}

.c4 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c4.c4 {
  padding: 0;
}

.c4.c4 .list-item-primary {
  color: #212121;
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c4.c4 .list-item-secondary {
  color: #757575;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

<ul
  className="MuiList-root MuiList-padding "
>
  <div
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button c0"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiListItemIcon-root c1"
    >
      <span
        className=" pdf icon c2"
        data-test-automation-id="iconThumbnail"
      >
        <svg
          className="c3"
          role="img"
          size="extraLarge"
        >
          <use
            href="#icon-pdf"
            xlinkHref="#icon-pdf"
          />
        </svg>
      </span>
    </div>
    <div
      className="MuiListItemText-root c4"
    >
      <span
        className="MuiTypography-root MuiTypography-body1 MuiListItemText-primary list-item-primary"
      >
        Two-line item name
      </span>
      <p
        className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary MuiListItemText-secondary list-item-secondary"
      >
        <span>
          <span>
            Secondary text
          </span>
          <span>
             · 
            XX/XX/XXXX
          </span>
        </span>
      </p>
    </div>
    <div
      className="c5"
    >
      <button
        aria-describedby={null}
        className="MuiButtonBase-root MuiIconButton-root c6"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        size="medium"
        tabIndex="0"
        title={null}
        type="button"
        variant="plain"
      >
        <span
          className="MuiIconButton-label"
        >
          <span
            className="c7  icon c2"
            disabled={false}
            size="medium"
          >
            <svg
              className="c8"
              role="img"
            >
              <use
                href="#undefined"
                xlinkHref="#undefined"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </div>
</ul>
`;
